<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="#ff49546e"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/pale_blue"
            android:textSize="55sp" />

        <ImageView
            android:id="@+id/updatePhoto"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/photo" />
           <!-- android:src="@drawable/none"-->
           <!-- android:contentDescription="@string/photo" />-->

        <EditText
            android:id="@+id/updateName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/updateDetail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            android:layout_below="@+id/updateName"
            android:hint="@string/details"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/updatePhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/updateDetail"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="25sp" />

    <Button
        android:id="@+id/updateBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/updatePhoneNumber"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/update_btn"
        android:textSize="25sp" />

    </RelativeLayout>
